force-app/main/default/objects/Quote/fields/Banca_d_appoggio__c.field-meta.xml
<CustomField>
    <fullName>Banca_d_appoggio__c</fullName>
    <inlineHelpText>Se è presente nell&apos;account si compila in automatico, si può sempre modificare a mano</inlineHelpText>
    <label>Banca d&apos;appoggio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>