force-app/main/default/objects/Quote/fields/Costi_spedizione__c.field-meta.xml
<CustomField>
    <fullName>Costi_spedizione__c</fullName>
    <label>Costi spedizione</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>