force-app/main/default/objects/Quote/fields/Data_conferma_d_ordine__c.field-meta.xml
<CustomField>
    <fullName>Data_conferma_d_ordine__c</fullName>
    <label>Data conferma d&apos;ordine</label>
    <type>Date</type>
</CustomField>