force-app/main/default/objects/Quote/fields/Data_Ordine__c.field-meta.xml
<CustomField>
    <fullName>Data_Ordine__c</fullName>
    <label>Data Ordine</label>
    <type>Date</type>
</CustomField>