force-app/main/default/objects/Quote/fields/Dealer_Segnalatore_x_provvigione__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Segnalatore_x_provvigione__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer/Segnalatore x provvigione</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Preventivi</relationshipLabel>
    <relationshipName>Preventivi</relationshipName>
    <type>Lookup</type>
</CustomField>