force-app/main/default/objects/Quote/fields/delivery_place__c.field-meta.xml
<CustomField>
    <fullName>delivery_place__c</fullName>
    <label>Delivery Place</label>
    <type>TextArea</type>
</CustomField>