force-app/main/default/objects/Quote/fields/Firma__c.field-meta.xml
<CustomField>
    <fullName>Firma__c</fullName>
    <label>Firma</label>
    <length>150</length>
    <type>Text</type>
</CustomField>