force-app/main/default/objects/Quote/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <formula>Opportunity.Account.IBAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBAN</label>
    <type>Text</type>
</CustomField>