force-app/main/default/objects/Quote/fields/Imballo__c.field-meta.xml
<CustomField>
    <fullName>Imballo__c</fullName>
    <defaultValue>&quot;suitable for truck delivery&quot;</defaultValue>
    <label>Imballo</label>
    <length>64</length>
    <type>Text</type>
</CustomField>