force-app/main/default/objects/Quote/fields/Margine_Finale__c.field-meta.xml
<CustomField>
    <fullName>Margine_Finale__c</fullName>
    <formula>Primo_Margine__c -  Provvigione__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margine Finale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>