force-app/main/default/objects/Quote/fields/N_Conferma_d_ordine__c.field-meta.xml
<CustomField>
    <fullName>N_Conferma_d_ordine__c</fullName>
    <label>N.Conferma d&apos;ordine</label>
    <length>16</length>
    <type>Text</type>
</CustomField>