force-app/main/default/objects/Quote/fields/Netto_Standard_rollup__c.field-meta.xml
<CustomField>
    <fullName>Netto_Standard_rollup__c</fullName>
    <label>Netto Standard</label>
    <summarizedField>QuoteLineItem.Netto_Dealer__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>