force-app/main/default/objects/Quote/fields/P_Iva_Account__c.field-meta.xml
<CustomField>
    <fullName>P_Iva_Account__c</fullName>
    <formula>Opportunity.Account.P_Iva__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P.Iva Account</label>
    <type>Text</type>
</CustomField>