force-app/main/default/objects/Quote/fields/Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Pagamento__c</fullName>
    <label>Pagamento</label>
    <length>64</length>
    <type>Text</type>
</CustomField>