force-app/main/default/objects/Quote/fields/Pagamento_cliente__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_cliente__c</fullName>
    <inlineHelpText>modalità per il cliente finale</inlineHelpText>
    <label>Pagamento cliente</label>
    <type>TextArea</type>
</CustomField>