force-app/main/default/objects/Quote/fields/Prezzo_condordato_merci__c.field-meta.xml
<CustomField>
    <fullName>Prezzo_condordato_merci__c</fullName>
    <formula>Prezzo_di_vendita__c -  ShippingHandling</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo condordato merci</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>