force-app/main/default/objects/Quote/fields/Prezzo_di_vendita__c.field-meta.xml
<CustomField>
    <fullName>Prezzo_di_vendita__c</fullName>
    <label>Prezzo di vendita</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>