force-app/main/default/objects/Quote/fields/Primo_Margine__c.field-meta.xml
<CustomField>
    <fullName>Primo_Margine__c</fullName>
    <formula>Prezzo_condordato_merci__c    -  ( Netto_Standard_rollup__c )</formula>
    <label>Primo Margine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>