force-app/main/default/objects/Quote/fields/Provvigione__c.field-meta.xml
<CustomField>
    <fullName>Provvigione__c</fullName>
    <label>Provvigione</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>