force-app/main/default/objects/Quote/fields/Resa__c.field-meta.xml
<CustomField>
    <fullName>Resa__c</fullName>
    <label>Resa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incluso (Italia)</fullName>
            </value>
            <value>
                <fullName>Escluso / Ex-Works</fullName>
            </value>
            <value>
                <fullName>Franco Destino / DAP</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>DDU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>