force-app/main/default/objects/Quote/fields/Rif_Vs_Ordine__c.field-meta.xml
<CustomField>
    <fullName>Rif_Vs_Ordine__c</fullName>
    <label>Rif. Vs Ordine</label>
    <length>32</length>
    <type>Text</type>
</CustomField>