force-app/main/default/objects/Quote/fields/Sconto_Incondizionato__c.field-meta.xml
<CustomField>
    <fullName>Sconto_Incondizionato__c</fullName>
    <formula>IF (ISBLANK(Prezzo_di_vendita__c), null,

 Totale_fornitura__c -  Prezzo_di_vendita__c )</formula>
    <label>Sconto Incondizionato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>