force-app/main/default/objects/Quote/fields/Sconto_Standard__c.field-meta.xml
<CustomField>
    <fullName>Sconto_Standard__c</fullName>
    <label>Sconto Standard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25+10</fullName>
            </value>
            <value>
                <fullName>25+5</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>