force-app/main/default/objects/Quote/fields/Sconto_Standard_perc__c.field-meta.xml
<CustomField>
    <fullName>Sconto_Standard_perc__c</fullName>
    <formula>(1-value(left( text(Sconto_Standard__c ),2))/100)*(1-value(mid( text(Sconto_Standard__c) ,3,20))/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sconto Standard %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>