force-app/main/default/objects/Quote/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <formula>Opportunity.Account_Final_Customer__r.Name</formula>
    <label>Ship To</label>
    <type>Text</type>
</CustomField>