force-app/main/default/objects/Quote/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <formula>ShippingHandling</formula>
    <label>Shipping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>