force-app/main/default/objects/Quote/fields/Swift__c.field-meta.xml
<CustomField>
    <fullName>Swift__c</fullName>
    <formula>Opportunity.Account.Swift__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swift</label>
    <type>Text</type>
</CustomField>