force-app/main/default/objects/Quote/fields/Telefono_Account__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Account__c</fullName>
    <formula>Opportunity.Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefono Account</label>
    <type>Text</type>
</CustomField>