force-app/main/default/objects/Quote/fields/Tempi_di_consegna__c.field-meta.xml
<CustomField>
    <fullName>Tempi_di_consegna__c</fullName>
    <label>Tempi di consegna</label>
    <length>48</length>
    <type>Text</type>
</CustomField>