force-app/main/default/objects/Quote/fields/Totale_articoli_c_o__c.field-meta.xml
<CustomField>
    <fullName>Totale_articoli_c_o__c</fullName>
    <label>Totale articoli c/o</label>
    <summarizedField>QuoteLineItem.Prezzo_finale_c_o__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>