force-app/main/default/objects/Quote/fields/Totale_finale_per_cliente__c.field-meta.xml
<CustomField>
    <fullName>Totale_finale_per_cliente__c</fullName>
    <inlineHelpText>Prezzo finale riservato al cliente</inlineHelpText>
    <label>Totale finale per cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>