force-app/main/default/objects/Quote/fields/Totale_fornitura__c.field-meta.xml
<CustomField>
    <fullName>Totale_fornitura__c</fullName>
    <formula>Netto_Standard_rollup__c +  ShippingHandling</formula>
    <label>Totale fornitura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>